<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#ffffff">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_msg"
            android:textSize="40dp"
            android:id="@+id/textViewWelcomeMessage" android:layout_gravity="left|center_vertical"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="#ffffff" >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/textViewFindingDevices"
                android:text="@string/find_devices_msg"/>

        <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="17dp"
                android:id="@+id/progressBar" android:layout_gravity="center_horizontal|top"/>
    </LinearLayout>

    <ListView
            android:id="@+id/listVie1w1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_weight="2">

    </ListView>
    <ListView
            android:id="@+id/listView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/listViewDevices"
            android:layout_weight="1"
            android:layout_marginTop="78dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/return_button"
            android:onClick="finishActivity"
            android:id="@+id/returnButton" android:layout_gravity="left|center_vertical"/>

</LinearLayout>